applications/solvers/basic/updateMaterialsWithSigmaV4FE/makeLOg
Making dependency list for source file updateMaterialsWithSigmaV4FE.C
SOURCE=updateMaterialsWithSigmaV4FE.C ;  g++ -m64 -Dlinux64 -DWM_DP -Wall -Wextra -Wno-unused-parameter -Wold-style-cast -Wnon-virtual-dtor -O3  -DNoRepository -ftemplate-depth-200 -I/opt/foam/foam-extend-4.0/src/finiteVolume/lnInclude     -I/opt/foam/foam-extend-4.0/src/meshTools/lnInclude     -I/opt/foam/foam-extend-4.0/src/sampling/lnInclude -IlnInclude -I. -I/opt/foam/foam-extend-4.0/src/foam/lnInclude -I/opt/foam/foam-extend-4.0/src/OSspecific/POSIX/lnInclude   -fPIC -c $SOURCE -o Make/linux64GccDPOpt/updateMaterialsWithSigmaV4FE.o
updateMaterialsWithSigmaV4FE.C: In function ‘int main(int, char**)’:
updateMaterialsWithSigmaV4FE.C:58:1: error: ‘material’ was not declared in this scope
 material.write();
 ^
updateMaterialsWithSigmaV4FE.dep:700: recipe for target 'Make/linux64GccDPOpt/updateMaterialsWithSigmaV4FE.o' failed
make: *** [Make/linux64GccDPOpt/updateMaterialsWithSigmaV4FE.o] Error 1
